[gd_scene load_steps=4 format=3 uid="uid://ejm5mrbfhj15"]

[ext_resource type="Script" uid="uid://cqexdu7jlfng3" path="res://Scripts/UI/GameOver.gd" id="1_n002h"]
[ext_resource type="LabelSettings" uid="uid://b8tlir45d4qoa" path="res://Assets/HUD.tres" id="2_6pbke"]
[ext_resource type="LabelSettings" uid="uid://cuug347ylb7m7" path="res://Assets/TItles.tres" id="2_34bmr"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n002h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(470, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -23.5
offset_right = 20.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="GameOverTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = ExtResource("2_34bmr")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level"
label_settings = ExtResource("2_6pbke")

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time"
label_settings = ExtResource("2_6pbke")
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kills"
label_settings = ExtResource("2_6pbke")
horizontal_alignment = 2

[node name="ReplayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 20
text = "Rejouer"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 20
text = "Menu principal"

[node name="BestLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Record :"
label_settings = ExtResource("2_6pbke")
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
